--- a/css/navigation-bar_wrapper.css
+++ b/css/navigation-bar_wrapper.css
@@ -99,3 +99,16 @@
     padding-left: 3px;
     padding-bottom: 2px;
 }
+
+.web-logo_link {
+    display: inline-block;
+    position: relative;
+    top: 30px;
+    right: -250px;
+}
+
+.web-logo {
+    border-radius: 10px;
+    position: relative;
+    z-index: 4;
+}
