--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;1,500;1,700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
+
 /*relative - you can move a element, relative to where it normally would be in a document
 absolute - everything else renders as if that absolute element didnt even exist´
 fixed- the element is fixed on his place, as you scroll
